"Dockerize my app and keycloak too"

--- a/customer-service/src/main/resources/application.properties
+++ b/customer-service/src/main/resources/application.properties
@@ -1,9 +1,18 @@
 server.port=8090
 spring.application.name=customer-service
-spring.datasource.url=jdbc:h2:mem:bank-db
-spring.h2.console.enabled=true
+#if i want to use h2
+#spring.datasource.url=jdbc:h2:mem:bank-db
+#spring.h2.console.enabled=true
+
+#if i want to use mysql to save data
+spring.datasource.url=${DB_URL:jdbc:mysql://localhost:3306/customer-db?createDatabaseIfNotExist=true}
+spring.datasource.username=youness
+spring.datasource.password=123456
+spring.jpa.generate-ddl=true
+
+
 #le realm pour generer JWT
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/ebank-realm
-spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8080/realms/ebank-realm/protocol/openid-connect/certs
+spring.security.oauth2.resourceserver.jwt.issuer-uri=${KEYCLOAK_ISSUER_URI:http://localhost:8080/realms/ebank-realm}
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${KEYCLOAK_JWK_URI:http://localhost:8080/realms/ebank-realm/protocol/openid-connect/certs}
 # swagger-ui custom path
 springdoc.swagger-ui.path=/swagger-ui.html
